minor refactor: avoid deprecated method usage